# market-data-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/market_data_mcp/: __init__.py  exchanges.py  server.py  symbols.py
tests/: test_exchanges.py  test_symbols.py
